--- a/public/assets/welcome.html
+++ b/public/assets/welcome.html
@@ -55,6 +55,11 @@
         </p>
 
         <p>
+            Also Luke, if you're reading this, feel free to reach out on Reddit at /u/mkv_gti whenever you're looking for a new
+            frontend developer. I'd love to help out with the project in a less janky way lol.
+        </p>
+
+        <p>
             This message is only shown on first install, I won't bug you anymore.
         </p>
 
