remove from watchlist

--- a/src/action/index.html
+++ b/src/action/index.html
@@ -7,6 +7,6 @@
     <title>Extension</title>
 </head>
 <body>
-    Hello world from extension action
+    This will do something later...
 </body>
 </html>
