--- a/src/action/index.html
+++ b/src/action/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extension</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    This will do something later...
+    <h2>Floaty Boi Data</h2>
+    
+    <textarea readonly placeholder="data will appear here" id="output"></textarea>
+    <button id="exportButton">Copy / Export Data</button>
+
+    <textarea placeholder="paste data here" id="input"></textarea>
+    <button id="importButton">Import Data</button>
+
+    <div id="message"></div>
+
+    <script src="./script" type="module"></script>
 </body>
+
 </html>
